force-app/main/default/objects/tc9_util__Utility_Package_Settings__c/tc9_util__Utility_Package_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>General custom settings used by the 2c9 managed utility package.</description>
    <label>2c9 - Utility Package Settings</label>
</CustomObject>