force-app/main/default/objects/tc9_util__Utility_Package_Settings__c/fields/tc9_util__Allow_TS_Manager_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Allow_TS_Manager_Adjustments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the &apos;2c9 Utilities – Timesheet Status Manager&apos; lets users trigger bulk timesheet adjustments. If unchecked, users can only revert unprocessed approved timesheets back to &apos;New&apos;.</description>
    <inlineHelpText>If checked, the &apos;2c9 Utilities – Timesheet Status Manager&apos; lets users trigger bulk timesheet adjustments. If unchecked, users can only revert unprocessed approved timesheets back to &apos;New&apos;.</inlineHelpText>
    <label>Allow TS Manager Adjustments</label>
    <type>Checkbox</type>
</CustomField>