force-app/main/default/objects/tc9_util__Utility_Package_Settings__c/fields/tc9_util__GST_Registration_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__GST_Registration_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selecting this option allows an employee who indicates they are not GST registered to proceed with creating a payee withholding in the &apos;2c9 Utilities - Community Capture GST&apos; screenflow.</description>
    <inlineHelpText>Selecting this option allows an employee who indicates they are not GST registered to proceed with creating a payee withholding in the &apos;2c9 Utilities - Community Capture GST&apos; screenflow.</inlineHelpText>
    <label>GST Registration Not Required</label>
    <type>Checkbox</type>
</CustomField>