force-app/main/default/objects/tc9_util__Utility_Package_Settings__c/fields/tc9_util__Super_Apra_File_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Super_Apra_File_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this will make a file upload mandatory in the Community Capture Superannuation Details when a user selects to add an Apra Super Fund.</description>
    <label>Super Apra File Required</label>
    <type>Checkbox</type>
</CustomField>