force-app/main/default/objects/tc9_util__Utility_Package_Settings__c/fields/tc9_util__TFN_Hide_Personal_Details__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__TFN_Hide_Personal_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will hide the employees personal details from the community TFN form.</description>
    <label>TFN Hide Personal Details</label>
    <type>Checkbox</type>
</CustomField>