force-app/main/default/objects/tc9_util__Utility_Package_Settings__c/fields/tc9_util__TFN_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__TFN_Message__c</fullName>
    <description>Allows a personal message to be added to the header of the TFN Declaration form.
This is typically used to guide employees, especially when the personal details section is read-only and they need to contact someone to request a change.</description>
    <inlineHelpText>Allows a personal message to be added to the header of the TFN Declaration form.
This is typically used to guide employees, especially when the personal details section is read-only and they need to contact someone to request a change.</inlineHelpText>
    <label>TFN Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>