force-app/main/default/objects/tc9_util__Utility_Package_Settings__c/fields/tc9_util__TFN_Personal_Details_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__TFN_Personal_Details_Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the personal details section of the TFN form will be read-only.</description>
    <inlineHelpText>If selected, the personal details section of the TFN form will be read-only.</inlineHelpText>
    <label>TFN Personal Details Read Only</label>
    <type>Checkbox</type>
</CustomField>